xidl-parser/tests/snapshots/test_union__hir__union_dcl.snap
---
source: xidl-parser/tests/test-union.rs
expression: hir
---
Specification(
    [
        TypeDcl(
            TypeDcl {
                decl: ConstrTypeDcl(
                    UnionForwardDcl(
                        UnionForwardDcl {
                            annotations: [],
                            ident: "A",
                        },
                    ),
                ),
            },
        ),
        TypeDcl(
            TypeDcl {
                decl: ConstrTypeDcl(
                    UnionDef(
                        UnionDef {
                            annotations: [],
                            ident: "B",
                            switch_type_spec: IntegerType(
                                I32,
                            ),
                            case: [],
                        },
                    ),
                ),
            },
        ),
        TypeDcl(
            TypeDcl {
                decl: ConstrTypeDcl(
                    UnionDef(
                        UnionDef {
                            annotations: [],
                            ident: "C",
                            switch_type_spec: IntegerType(
                                I32,
                            ),
                            case: [
                                Case {
                                    label: [
                                        Value(
                                            ConstExpr(
                                                XorExpr(
                                                    AndExpr(
                                                        ShiftExpr(
                                                            AddExpr(
                                                                MultExpr(
                                                                    UnaryExpr(
                                                                        PrimaryExpr(
                                                                            Literal(
                                                                                IntegerLiteral(
                                                                                    IntegerLiteral(
                                                                                        "0",
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                    element: ElementSpec {
                                        annotations: [],
                                        ty: TypeSpec(
                                            SimpleTypeSpec(
                                                IntegerType(
                                                    I32,
                                                ),
                                            ),
                                        ),
                                        value: SimpleDeclarator(
                                            SimpleDeclarator(
                                                "a",
                                            ),
                                        ),
                                        field_id: Some(
                                            1,
                                        ),
                                    },
                                },
                                Case {
                                    label: [
                                        Value(
                                            ConstExpr(
                                                XorExpr(
                                                    AndExpr(
                                                        ShiftExpr(
                                                            AddExpr(
                                                                MultExpr(
                                                                    UnaryExpr(
                                                                        PrimaryExpr(
                                                                            Literal(
                                                                                IntegerLiteral(
                                                                                    IntegerLiteral(
                                                                                        "1",
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                    element: ElementSpec {
                                        annotations: [],
                                        ty: TypeSpec(
                                            TemplateTypeSpec(
                                                StringType(
                                                    StringType {
                                                        bound: None,
                                                    },
                                                ),
                                            ),
                                        ),
                                        value: SimpleDeclarator(
                                            SimpleDeclarator(
                                                "b",
                                            ),
                                        ),
                                        field_id: Some(
                                            2,
                                        ),
                                    },
                                },
                            ],
                        },
                    ),
                ),
            },
        ),
    ],
)
