xidl-parser/tests/snapshots/test_union__hir__union_recursive.snap
---
source: xidl-parser/tests/test-union.rs
expression: hir
---
Specification(
    [
        TypeDcl(
            ConstrTypeDcl(
                UnionDef(
                    UnionDef {
                        annotations: [],
                        ident: "Node",
                        switch_type_spec: IntegerType(
                            I32,
                        ),
                        case: [
                            Case {
                                label: [
                                    Value(
                                        Literal(
                                            IntegerLiteral(
                                                IntegerLiteral(
                                                    "0",
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                element: ElementSpec {
                                    annotations: [],
                                    ty: TypeSpec(
                                        IntegerType(
                                            I32,
                                        ),
                                    ),
                                    value: SimpleDeclarator(
                                        SimpleDeclarator(
                                            "value",
                                        ),
                                    ),
                                    field_id: Some(
                                        1,
                                    ),
                                    recursive: false,
                                },
                            },
                            Case {
                                label: [
                                    Value(
                                        Literal(
                                            IntegerLiteral(
                                                IntegerLiteral(
                                                    "1",
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                element: ElementSpec {
                                    annotations: [],
                                    ty: TypeSpec(
                                        ScopedName(
                                            ScopedName {
                                                name: [
                                                    "Node",
                                                ],
                                                is_root: false,
                                            },
                                        ),
                                    ),
                                    value: SimpleDeclarator(
                                        SimpleDeclarator(
                                            "next",
                                        ),
                                    ),
                                    field_id: Some(
                                        2,
                                    ),
                                    recursive: true,
                                },
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
)
